Need null pointer check for insurance (extra safety check) Bug 155189 a=chofmann adt=putterman